Poprawa walidacji i logiki metody create